# job_hunter_agent

./: .env.example  .gitignore  README.md  pyproject.toml
apps/: __init__.py
apps/api/: __init__.py
apps/api/app/: config.py  db.py  main.py  models.py  schemas.py
apps/api/app/routers/: applications.py  jobs.py  meta.py  profiles.py  searches.py  tasks.py
apps/api/app/services/: __init__.py  ai_drafting.py  background_tasks.py  company_research.py  drafting.py  health.py  matching.py  resume_parser.py  saved_searches.py  search_preferences.py  storage.py  worker_runs.py
apps/api/app/services/job_discovery/: __init__.py  service.py
apps/api/app/services/job_sources/: ashby.py  greenhouse.py  lever.py  linkedin.py
apps/api/app/services/llm/: __init__.py  base.py  gemini_client.py
apps/api/app/services/profile_sources/: __init__.py  linkedin_profile.py
apps/web/: index.html
apps/web/src/: App.css  App.tsx  api.ts  index.css  types.ts
apps/worker/: __init__.py  answer_resolver.py  field_classifier.py  form_extractor.py  main.py  platform_adapters.py
scripts/: dev.py  orchestrator.py
tests/: conftest.py  test_application_assist.py  test_company_research.py  test_deletion_flow.py  test_discovery_errors.py  test_drafting.py  test_job_sources.py  test_platform_upgrade.py  test_profile_pipeline.py  test_web_discovery.py  test_worker_components.py  test_worker_flow.py
tests/fixtures/: greenhouse_form.html  lever_form.html
